[metadata]
name = NBDRP
version = 0.0.1
author = Vandini Elia
author_email = 05vaneli@rgtfo-me.it
description = Nicky's Backend Digital Register Package
keywords = digital, digitales, register
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/pypa/sampleproject
project_urls =
    Bug Tracker = https://github.com/pypa/sampleproject/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir = src
packages = NBDRP
python_requires = >=3.6
install_requires =
    beautifulsoup4,
    certifi,
    charset,
    coverage,
    idna,
    pip,
    requests,
    setuptools,
    soupsieve,
    urllib3,
    wheel

[options.packages.find]
where = src